--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+https://www.goyllo.com/tricks/windows/destroy-friends-computer/
+redirect_to:
+ - https://www.goyllo.com
 ---
 
 <div class="home">
