--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
   <body>
    <center> <h1> <i>Sorry !!!! Page not found </i></h1></center>
   <p> Here is our most popular blog post </p>
-  <a href="https://www.allfreetricks.com/destroy-your-friends-computer.html">Destroy Your Friends Computer Using Simple Notepad Virus</a>
-  <a href="https://www.allfreetricks.com/get-rs50-free-talktime-with-hike.html">Get Rs.50 Free Talktime With Hike Messenger</a>
+  <a href="https://www.allfreetricks.com/destroy-your-friends-computer.html">Destroy Your Friends Computer Using Simple Notepad Virus</a><br/>
+  <a href="https://www.allfreetricks.com/get-rs50-free-talktime-with-hike.html">Get Rs.50 Free Talktime With Hike Messenger</a><br/>
   </body>
 </head>
 </html>
