--- a/404.html
+++ b/404.html
@@ -6,10 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>404 Error</title>
   <body>
-   <center> <h1> <i>Sorry !!!! Page not found </i></h1></center>
+   <center> 
+   <h1> <i>Sorry !!!! Page not found </i></h1>
   <p> Here is our most popular blog post </p>
   <a href="https://www.allfreetricks.com/destroy-your-friends-computer.html">Destroy Your Friends Computer Using Simple Notepad Virus</a><br/>
   <a href="https://www.allfreetricks.com/get-rs50-free-talktime-with-hike.html">Get Rs.50 Free Talktime With Hike Messenger</a><br/>
+  </center>
   </body>
 </head>
 </html>
