--- a/promo/index.html
+++ b/promo/index.html
@@ -216,11 +216,11 @@ img {
 	</div>
     <div id="content">
     	<h2>Watch and Share</h2>
-        <div class="picPreview"><img src="/1.jpg" alt="" width="478" height="359"></div>
+        <div class="picPreview"><img src="/promo/1.jpg" alt="" width="478" height="359"></div>
          </div>	 
     <div id="content1">
         <h2>Watch and Share</h2>
-         <div class="picPreview"><img src="/2.jpg" alt="" width="478" height="359"></div>
+         <div class="picPreview"><img src="/promo/2.jpg" alt="" width="478" height="359"></div>
     </div>
 	<div id="ads"
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
