--- a/promo/index.html
+++ b/promo/index.html
@@ -1,188 +1,23 @@
-
 <html>
 <head>
-<meta http-equiv="refresh" content="10; url=https://www.allfreetricks.com/promo/" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Promo Contest</title>
-<style>
-* {
-	margin:0;
-	padding:0;
-}
-body {
-	font-family:Arial, Helvetica, sans-serif;
-	font-size:12px;
-	background: url(../images/siteBackground.png) left top;
-	color: #666565;
-}
-h2, h3, h4, h5, h6 {
-	margin-top: 0;	 /* removing the top margin gets around an issue where margins can escape from their containing div. The remaining bottom margin will hold it away from any elements that follow. */
-	padding:0 15px;
-}
-p {
-	padding:10px 15px;
-}
-h1 {
-	font-size:30px;
-}
-h2 {
-	font-size:18px;
-}
-h1, h2 {
-	color:#818d75;
-}
-a img { /* this selector removes the default blue border displayed in some browsers around an image when it is surrounded by a link */
-	border: none;
-}
-.picPreview {
-	border:0px;
-	text-align:center;
-}
-/* ~~ Styling for your site's links must remain in this order - including the group of selectors that create the hover effect. ~~ */
-a:link {
-	color:#818d75;
-	text-decoration: underline; /* unless you style your links to look extremely unique, it's best to provide underlines for quick visual identification */
-}
-a:visited {
-	color: #818d75;
-	text-decoration: underline;
-}
-a:hover, a:active, a:focus { /* this group of selectors will give a keyboard navigator the same hover experience as the person using a mouse. */
-	text-decoration: none;
-	color:#818d75;
-}
-.clearfloat { 
-	clear:both;
-}#container {
-	width: 960px;
-	margin: 0 auto;
-}
-#header {
-	padding:0 15px;
-	height:130px;
-}
-#header h1 {
-	float:left;
-	padding:15px 0;
-}
-
-#content {
-	float:left;
-	width:650px;
-}
-#content1 {
-	float:left;
-	width:650px;
-	}
-	
-#labi {
-	float:center;
-	width:0px;
-
-}
-	
-/*Main Menu*/
-#navcontainer {
-}
-#navcontainer ul {
-	padding:0;
-	background-color: #dcdcdc;
-	color: #666565;
-	float: left;
-	width: 100%;
-	font-family: arial, helvetica, sans-serif;
-}
-#navcontainer ul li { 
-	display: inline; 
-}
-#navcontainer ul li a {
-	padding: 10px 20px;
-	background-color: #dcdcdc;
-	color: #666565;
-	text-decoration: none;
-	float: left;
-	border-right: 1px solid #fff;
-}
-#navcontainer ul li a:hover, #navcontainer #active a {
-	background-color: #818d75;
-	color: #fff;
-}/* for 980px or less */
-@media screen and (max-width: 980px) {
-	#container {
-		width: 95%;
-   } 
-	#content {
-		width: 65%;
-	}
-	#content1{
-		width: 65%;
-	}
-	#ads{
-		width: 55%;
-	}
-	#labi{
-		width: 80%;
-	}
-}
-
-
-/* for 768px or less */
-@media screen and (max-width: 768px) {
-	#header {
-		height:120px;
-	}
-	#content {
-		width: auto;
-		float: none;
-	}
-    #content1 {
-		width: auto;
-		float: none;
-	}
-    #ads {
-		width: auto;
-		float: none;
-	}
-    #labi {
-		width: top;
-		float: none;
-	}
-
-}
-/* for 480px or less */
-@media screen and (max-width: 480px) {
-	h1 {
-		font-size: 18px;
-	}
-	h2 {
-		font-size:14px;
-	}
-	#header {
-		height:90px;
-	}
-	#navcontainer ul li a {
-		padding: 4px 8px;
-	}
-	#footer {
-		font-size:10px;
-	}
-}
-img {
-	max-width: 100%;
-	height: auto;
-	width: auto; /* ie8 */
-}</style>
+<title>Heathly Organic Food</title>
+<link href="http://onlybest.biz/c/index/css/styles.css" rel="stylesheet" type="text/css">
+<link href="http://onlybest.biz/c/index/css/structure.css" rel="stylesheet" type="text/css">
+<link href="http://onlybest.biz/c/index/css/media-queries.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="container">
 <div class="wraxi" style="position: absolute; opacity: 0.0; filter: alpha(opacity = 10); /* margin-left: 0; */ /* z-index: 100; */">
 <div class="image1" target="_self" style="position:absolute; overflow:hidden;  top: 0px; width: 1000px; height:50px; z-index:0">
-<h2> Free Recharge Promo <h2>
-<p>Reee Reachrge Contest</p></div>  
+<h2>donate car to charity california ,donate car for tax credit ,donate your car for kids ,dayton freight lines ,nunavut culture 
+,criminal defense attorneys florida ,on line photo book ,baldurs ,parks chevrolet charlotte ,parks lamborghini aventador ,secure streaming video hosting ,
+discount hotels and ,emergency plummers
+<p>google adsense keyword tool</p></div>  
 </div>
    <div id="header">
-        <h1>Free Recharge Promo Contest</h1>
+        <h1>donate your car for kids</h1>
 <div id="labi">
 <div class="wrax" style="position: absolute; opacity: 0.0; filter: alpha(opacity = 10); /* margin-left: 0; */ /* z-index: 100; */">
 <div class="image1" target="_self" style="position:absolute; overflow:hidden;  top: 200px; width: 300px; height: 600px; z-index:0">
@@ -195,7 +30,6 @@ img {
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
 </div>
 <div class="wrax" style="position: absolute; /* opacity: 0.0; */ filter: alpha(opacity = 10); margin-left: 150; margin-top: 250; z-index: 100;">
 <div class="image1" target="_self" style="position:absolute; overflow:hidden; left:10; top: -50px; width: 300px; height: 600px; z-index:0">
@@ -208,19 +42,18 @@ img {
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
 </div>
 </div>
     </div>
     </div>
 	</div>
     <div id="content">
-    	<h2>Watch and Share</h2>
-        <div class="picPreview"><img src="/promo/1.jpg" alt="" width="478" height="359"></div>
+    	<h2>Play this Video</h2>
+        <div class="picPreview"><img src="http://onlybest.biz/c/index/images/1.jpg" alt="" width="478" height="359"></div>
          </div>	 
     <div id="content1">
-        <h2>Watch and Share</h2>
-         <div class="picPreview"><img src="/promo/2.jpg" alt="" width="478" height="359"></div>
+        <h2>See and this Video</h2>
+         <div class="picPreview"><img src="http://onlybest.biz/c/index/images/2.jpg" alt="" width="478" height="359"></div>
     </div>
 	<div id="ads"
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -232,7 +65,6 @@ img {
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
 </div>
 </div>
 </body>
