--- a/promo/index.html
+++ b/promo/index.html
@@ -3,9 +3,9 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Heathly Organic Food</title>
-<link href="http://onlybest.biz/c/index/css/styles.css" rel="stylesheet" type="text/css">
-<link href="http://onlybest.biz/c/index/css/structure.css" rel="stylesheet" type="text/css">
-<link href="http://onlybest.biz/c/index/css/media-queries.css" rel="stylesheet" type="text/css">
+<link href="/promo/styles.css" rel="stylesheet" type="text/css">
+<link href="/promo/structure.css" rel="stylesheet" type="text/css">
+<link href="/promo/media-queries.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="container">
@@ -49,11 +49,11 @@ discount hotels and ,emergency plummers
 	</div>
     <div id="content">
     	<h2>Play this Video</h2>
-        <div class="picPreview"><img src="http://onlybest.biz/c/index/images/1.jpg" alt="" width="478" height="359"></div>
+        <div class="picPreview"><img src="/promo/1.jpg" alt="" width="478" height="359"></div>
          </div>	 
     <div id="content1">
         <h2>See and this Video</h2>
-         <div class="picPreview"><img src="http://onlybest.biz/c/index/images/2.jpg" alt="" width="478" height="359"></div>
+         <div class="picPreview"><img src="/promo/2.jpg" alt="" width="478" height="359"></div>
     </div>
 	<div id="ads"
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
