--- a/promo/index.html
+++ b/promo/index.html
@@ -22,23 +22,26 @@ discount hotels and ,emergency plummers
 <div class="wrax" style="position: absolute; opacity: 0.0; filter: alpha(opacity = 10); /* margin-left: 0; */ /* z-index: 100; */">
 <div class="image1" target="_self" style="position:absolute; overflow:hidden;  top: 200px; width: 300px; height: 600px; z-index:0">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- adse -->
+<!-- First Ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:600px"
+     style="display:block"
      data-ad-client="ca-pub-5996828242175180"
-     data-ad-slot="5457600358"></ins>
+     data-ad-slot="2764199159"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
 </div>
 <div class="wrax" style="position: absolute; /* opacity: 0.0; */ filter: alpha(opacity = 10); margin-left: 150; margin-top: 250; z-index: 100;">
 <div class="image1" target="_self" style="position:absolute; overflow:hidden; left:10; top: -50px; width: 300px; height: 600px; z-index:0">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- adse -->
+<!-- First Ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:600px"
+     style="display:block"
      data-ad-client="ca-pub-5996828242175180"
-     data-ad-slot="5457600358"></ins>
+     data-ad-slot="2764199159"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
@@ -57,11 +60,12 @@ discount hotels and ,emergency plummers
     </div>
 	<div id="ads"
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- adse -->
+<!-- First Ads -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:300px;height:600px"
+     style="display:block"
      data-ad-client="ca-pub-5996828242175180"
-     data-ad-slot="5457600358"></ins>
+     data-ad-slot="2764199159"
+     data-ad-format="auto"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
