--- a/promo/index.html
+++ b/promo/index.html
@@ -2,11 +2,11 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title>Promo</title>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 		<script src="/promo/countdown.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 
-	<body>
+	<body><center>
 		<div id="container">
 			<div id="countdown"></div>
 			<script type="text/javascript" charset="utf-8">
@@ -37,6 +37,8 @@
 		  </script>
 		</div>
 		Click on Bewlow Ads, or Wait till the time is over.
-
+		
+		
+		</center>
 	</body>
 </html>
