--- a/promo/index.html
+++ b/promo/index.html
@@ -38,7 +38,27 @@
 		</div>
 		Click on Bewlow Ads, or Wait till the time is over.
 		
-		
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- First Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5996828242175180"
+     data-ad-slot="2764199159"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- First Ads -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5996828242175180"
+     data-ad-slot="2764199159"
+     data-ad-format="vertical"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 		</center>
 	</body>
 </html>
