--- a/promo/index.html
+++ b/promo/index.html
@@ -38,13 +38,12 @@
 		</div>
 		Click on Bewlow Ads, or Wait till the time is over.
 		
-		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- First Ads -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- adse -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:300px;height:600px"
      data-ad-client="ca-pub-5996828242175180"
-     data-ad-slot="2764199159"
-     data-ad-format="auto"></ins>
+     data-ad-slot="5457600358"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
