--- a/promo/index.html
+++ b/promo/index.html
@@ -1,44 +1,27 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title>Promo</title>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-		<script src="/promo/countdown.js" type="text/javascript" charset="utf-8"></script>
-	</head>
-
-	<body><center>
-		<div id="container">
-			<div id="countdown"></div>
-			<script type="text/javascript" charset="utf-8">
-
-		 	var countdown =  $("#countdown").countdown360({
-       	 	radius      : 60,
-         	seconds     : 300,
-         	fontColor   : '#FFFFFF',
-         	autostart   : false,
-         	onComplete  : function () { console.log('done') }
-		   });
-			countdown.start();
-			console.log('countdown360 ',countdown);
-		 	$(document).on("click","button",function(e){
-		 		e.preventDefault();
-		 		var type = $(this).attr("data-type");
-		 		if(type === "time-remaining")
-		 		{
-		 			var timeRemaining = countdown.getTimeRemaining();
-		 			alert(timeRemaining);
-		 		}
-		 		else
-		 		{
-		 			var timeElapsed = countdown.getElapsedTime();
-		 			alert(timeElapsed);
-		 		}
-		 	});
-		  </script>
-		</div>
-		Click on Bewlow Ads, or Wait till the time is over.
-		
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Heathly Organic Food</title>
+<link href="/promo/styles.css" rel="stylesheet" type="text/css">
+<link href="/promo/structure.css" rel="stylesheet" type="text/css">
+<link href="/promo/media-queries.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<div id="container">
+<div class="wraxi" style="position: absolute; opacity: 0.0; filter: alpha(opacity = 10); /* margin-left: 0; */ /* z-index: 100; */">
+<div class="image1" target="_self" style="position:absolute; overflow:hidden;  top: 0px; width: 1000px; height:50px; z-index:0">
+<h2>donate car to charity california ,donate car for tax credit ,donate your car for kids ,dayton freight lines ,nunavut culture 
+,criminal defense attorneys florida ,on line photo book ,baldurs ,parks chevrolet charlotte ,parks lamborghini aventador ,secure streaming video hosting ,
+discount hotels and ,emergency plummers
+<p>google adsense keyword tool</p></div>  
+</div>
+   <div id="header">
+        <h1>donate your car for kids</h1>
+<div id="labi">
+<div class="wrax" style="position: absolute; opacity: 0.0; filter: alpha(opacity = 10); /* margin-left: 0; */ /* z-index: 100; */">
+<div class="image1" target="_self" style="position:absolute; overflow:hidden;  top: 200px; width: 300px; height: 600px; z-index:0">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- adse -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:300px;height:600px"
@@ -47,17 +30,42 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
+</div>
+<div class="wrax" style="position: absolute; /* opacity: 0.0; */ filter: alpha(opacity = 10); margin-left: 150; margin-top: 250; z-index: 100;">
+<div class="image1" target="_self" style="position:absolute; overflow:hidden; left:10; top: -50px; width: 300px; height: 600px; z-index:0">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- First Ads -->
+<!-- adse -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:inline-block;width:300px;height:600px"
      data-ad-client="ca-pub-5996828242175180"
-     data-ad-slot="2764199159"
-     data-ad-format="vertical"></ins>
+     data-ad-slot="5457600358"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-		</center>
-	</body>
+</div>
+</div>
+    </div>
+    </div>
+	</div>
+    <div id="content">
+    	<h2>Play this Video</h2>
+        <div class="picPreview"><img src="/promo/1.jpg" alt="" width="478" height="359"></div>
+         </div>	 
+    <div id="content1">
+        <h2>See and this Video</h2>
+         <div class="picPreview"><img src="/promo/2.jpg" alt="" width="478" height="359"></div>
+    </div>
+	<div id="ads"
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- adse -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-5996828242175180"
+     data-ad-slot="5457600358"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+</div>
+</body>
 </html>
